--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ http://jsfiddle.net/4eQUm/29/
 <head>
   <meta charset="utf-8">
   <title>Kanji par année</title>
-  <link rel="icon" type="image/x-icon" href="https://cdn.glitch.com/5afb9eb8-2a52-461a-ac40-eb9a75f2caee%2Ffavicon.ico?1554240145185" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
 
